# thecalc

./: README.md  app.py  calc.py  email_config.json  quick_calc.py  terminal  verify.py
app/: test_calculator.py
calculator/: .pre-commit-config.yaml  README.md  pyproject.toml
calculator/requirements/: base.txt
calculator/src/calculator/: debug_test.py
calculator/src/calculator/core/: calc.py  risk_analyzer.py
calculator/src/calculator/web/: __init__.py  app.py
calculator/src/calculator/web/static/css/: styles.css
calculator/src/calculator/web/static/js/: base_calculator.js  comparison.js  deal_analyzer.js  document_generator.js  flip_calculator.js  help.js  marketing_tracker.js  negotiation.js  professional.js  rental_calculator.js  risk_analyzer.js  seller_finance.js  tab_manager.js  wholesale_calculator.js
calculator/src/calculator/web/templates/: index.html
calculator/src/calculator/web/templates/documents/: master_lease.docx
calculator/tests/: test_calculator.py
templates/: index.html
tests/: test_calculator.py
web_version/: app.py
web_version/static/js/: calculator.js  comparison.js  negotiation.js  professional.js
web_version/templates/: index.html
